sample query 연습

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+server.port=8088
 
+spring.h2.console.enabled=true
+spring.h2.console.platform= h2
+spring.datasource.url = jdbc:h2:file:./SampleDB/test_db;AUTO_SERVER=TRUE
+spring.datasource.username= sa
+spring.datasource.password=
+spring.h2.console.path=/test_db
+spring.datasource.driver-class-name=org.h2.Driver
+
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.sql=debug
+logging.level.org.hibernate.type = trace
+
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+
+spring.datasource.hikari.connectionTimeout=9000
+spring.datasource.hikari.leak-detection-threshold=60000
